--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,3 +6,35 @@
   <li><%= link_to "Edit", edit_article_path(@article) %></li>
   <li><%= link_to "Destroy", article_path(@article), method: :delete %></li>
 </ul>
+
+
+
+<h2>Comments</h2>
+<% @article.comments.each do |comment| %>
+  <p>
+    <h2>Commenter</h2>
+    <%= comment.commenter %>
+  </p>
+
+  <p>
+    <h2>Comment:</h2>
+    <%= comment.body %>
+  </p>
+<% end %>
+
+
+
+<h2>Add a Comment:</h2>
+<%= form_with model: [ @article, @article.comments.build ] do |f| %>
+  <p>
+    <%= f.label :commenter %><br>
+    <%= f.text_area :commenter %>
+  </p>
+  <p>
+    <%= f.label :body %><br>
+    <%= f.text_area :body %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
