--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,16 +11,4 @@
 <%= render @article.comments %>
 
 <h2>Add a Comment:</h2>
-<%= form_with model: [ @article, @article.comments.build ] do |f| %>
-  <p>
-    <%= f.label :commenter %><br>
-    <%= f.text_area :commenter %>
-  </p>
-  <p>
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
-  </p>
-  <p>
-    <%= f.submit %>
-  </p>
-<% end %>
+<%= render 'comments/form' %>
