Add: index/_comment.html.erbでarchiveかvalidates in visible.rb ::6

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,9 +1,11 @@
-<p>
-  <h2>Commenter</h2>
-  <%= comment.commenter %>
-</p>
+<% unless comment.archived? %>
+  <p>
+    <h2>Commenter</h2>
+    <%= comment.commenter %>
+  </p>
 
-<p>
-  <h2>Comment:</h2>
-  <%= comment.body %>
-</p>
+  <p>
+    <h2>Comment:</h2>
+    <%= comment.body %>
+  </p>
+<% end %>
